<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="20dp"
    app:cardElevation="10dp"
    app:cardMaxElevation="12dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    >


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_requests"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:layout_margin="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/spae_part_ic" />

        <TextView
            android:id="@+id/requests_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/workshop_title"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/requests_delivery_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_calender"
            android:text="@string/Delivery_date"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_margin="5dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/requests_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:background="@color/purple_500"/>

    </LinearLayout>



</androidx.cardview.widget.CardView>