<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SigninSignup.LoginFragment"
    android:background="@drawable/login_bg"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       android:layout_margin="6dp"
        android:orientation="vertical"

        >

        <TextView
            android:id = "@+id/loginTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/logInString"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#302D33"
            android:textSize="30sp"
            android:layout_marginTop="250dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            >


            <EditText
                android:id="@+id/emailTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_margin="8dp"
                android:hint="@string/emailAr" />

            <EditText
                android:id="@+id/passTxt"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/passwordAr" />


        </LinearLayout>

        <Button
            android:layout_marginTop="50dp"
            android:id="@+id/logBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"

            android:text="@string/logInString"
            android:textColor="#ECEBE6"
            android:textSize = "20sp"

            />

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"

            android:text="@string/signUp"
            android:textColor="#ECEBE6"
            android:textSize = "20sp"
            />

    </LinearLayout>
</FrameLayout>
