<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.SigninSignup.SignUpFragment"
    android:background="@drawable/login_bg"
    >



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="6dp">


        <TextView
            android:id="@+id/registerTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="220dp"
            android:layout_marginBottom="0dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/signUpAr"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#302D33"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_marginTop="-40dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity = "center"
            tools:context=".MainActivity">

            <EditText
                android:background="@drawable/et_bg"
                android:id="@+id/emailTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd ="16dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/emailAr" />

            <EditText
                android:background="@drawable/et_bg"
                android:id="@+id/usernameTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginStart="16dp"
                android:layout_marginEnd ="16dp"
                android:layout_marginBottom="5dp"
                android:inputType="textPersonName"
                android:hint="@string/usernameAr"
                android:textAlignment="center" />

            <EditText
                android:background="@drawable/et_bg"
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="المدينة"
                android:layout_marginStart="16dp"
                android:layout_marginEnd ="16dp"
                android:layout_marginBottom="5dp"
                android:inputType="textPersonName"
                android:textAlignment="center" />

            <EditText
                android:background="@drawable/et_bg"
                android:id="@+id/pass1Txt"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd ="16dp"
                android:layout_marginBottom="5dp"
                android:inputType="textPassword"
                android:hint="@string/passwordAr" />

            <EditText
                android:background="@drawable/et_bg"
                android:id="@+id/pass2Txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginStart="16dp"
                android:layout_marginEnd ="16dp"
                android:layout_marginBottom="5dp"
                android:textAlignment="center"
                android:inputType="textPassword"
                android:hint="@string/confirmPassowrdAR" />




            <Spinner
                android:background="@drawable/spinner_bg"
                android:id="@+id/spinner"
                android:layout_height="wrap_content"
                android:layout_width="160dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"

                />

            <Button
                android:background="@drawable/btn_bg"
                android:id="@+id/signUpBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop = "8dp"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="50dp"
                android:layout_gravity="center"
                android:text="@string/signUp"
                android:textColor="#ECEBE6"
                android:textSize = "20sp"

                />


        </LinearLayout>

    </LinearLayout>

</FrameLayout>

<!--<androidx.cardview.widget.CardView-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="0dp"-->
<!--app:cardCornerRadius="5dp"-->
<!--app:cardElevation="20dp"-->
<!--app:layout_constraintBottom_toTopOf="@id/signUpBtn"-->
<!--app:layout_constraintStart_toStartOf="parent"-->
<!--app:layout_constraintEnd_toEndOf="parent"-->
<!--app:layout_constraintTop_toBottomOf="@id/registerTv"-->
<!--android:layout_margin="8dp"-->
<!--android:backgroundTint="#EBECF1"-->
<!--    >-->


<!--</androidx.cardview.widget.CardView>-->